fix footer alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -148,8 +148,6 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   padding: 30px 5px 50px;
   text-align: center;
 }
